		Implementing the first component method: "unassemble" for the
		CPUComponent.
		GTKMM GUI test: Connecting to the "activate" signal of a text
		entry, so that commands are executed once ENTER is pressed;
		this does not work with tab-completion and command line
		editing though, since only ENTER is signaled.
20080410	CPUComponent's unassemble method now remembers where it last
		unassembled, and starts at m_pc if it is the first time it
		is executed.
		Porting more MIPS-related code from GXemul 0.4.6.3; some
		more instructions can be disassembled now.
20080412	Implementing tab-completion of methods on components.
		Executing a component name without any method name, which
		results in the component tree being dumped, will now also
		dump all of the component's state variables.
		Continuing on porting GXemul 0.4.6.3's MIPS disassembly code.
		The GTKMM GUI can now be shut down by the "quit" command.
20080413	Introducing a new RunState (NotRunning). Making the GTKMM GUI
		Run/Pause buttons stay down while in the Running/Paused
		runstates. (Also making the icons smaller by not showing text
		labels, and enabling tooltips instead. Looks/feels nicer.)
		Implementing an undoable ResetAction.
20080416	GUI updates: Fixed-width font in the debug console, and it
		now scrolls to bottom on text output.
20080419	AddComponentAction must not remember component references
		(for undo/redo); instead it now remember paths.
		Also implementing a similar fix for RemoveComponentAction.
20080423	Action::Execute and Undo are now private, and only reachable
		from the ActionStack (now a friend class of Action).
20080424	Upgrading configure script check for gtkmm-2.4 from version
		2.12.5 to 2.12.7, to be in synch with my system.
20080426	The continue command now clears the Undo stack.
		State variable names of components can now be tab completed.
		"Running" a variable (e.g. cpu0.pc) will print its value.
20080427	Continuing a little on tab completion of variable names.