@@ -43,6 +43,7 @@ ContinueCommand::~ContinueCommand()
 void ContinueCommand::Execute(GXemul& gxemul, const vector<string>& arguments)
 {
 	gxemul.GetActionStack().Clear();
+	gxemul.SetDirtyFlag(true);
 	gxemul.SetRunState(GXemul::Running);
 }
 
@@ -86,6 +87,22 @@ static void Test_ContinueCommand_Affect_RunState()
 	    gxemul.GetRunState() == GXemul::Running);
 }
 
+static void Test_ContinueCommand_Affect_DirtyFlag()
+{
+	refcount_ptr<Command> cmd = new ContinueCommand;
+	vector<string> dummyArguments;
+
+	GXemul gxemul(false);
+
+	UnitTest::Assert("the model should not be dirty initially",
+	    gxemul.GetDirtyFlag() == false);
+
+	cmd->Execute(gxemul, dummyArguments);
+
+	UnitTest::Assert("the model should be dirty when running",
+	    gxemul.GetDirtyFlag() == true);
+}
+
 static void Test_ContinueCommand_ClearsActionStack()
 {
 	GXemul gxemul(false);
@@ -106,6 +123,7 @@ static void Test_ContinueCommand_ClearsActionStack()
 UNITTESTS(ContinueCommand)
 {
 	UNITTEST(Test_ContinueCommand_Affect_RunState);
+	UNITTEST(Test_ContinueCommand_Affect_DirtyFlag);
 	UNITTEST(Test_ContinueCommand_ClearsActionStack);
 }
 
