@@ -122,6 +122,8 @@ void SaveCommand::Execute(GXemul& gxemul, const vector<string>& arguments)
 
 	ShowMsg(gxemul, "Emulation setup saved to " + filename + "\n");
 	gxemul.SetEmulationFilename(filename);
+	gxemul.SetDirtyFlag(false);
+	gxemul.GetActionStack().Clear();
 }
 
 
